<resources>
    <string name="app_name">Android Playground 2</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="search">Search</string>
    <string name="app_components">App Components</string>
    <string name="services">Services</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="foreground_service_2">Foreground Service 2</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="foreground_service_title">Foreground Service Title</string>
    <string name="description">Description</string>
    <string name="starting_service">Starting service</string>
    <string name="stopping_service">Stopping service</string>
    <string name="background_service">Background Service</string>
    <string name="bound_service">Bound Service</string>
    <string name="hilt">hilt</string>
    <string name="coroutines">Coroutines</string>
    <string name="single_network_call">Single Network Call</string>
    <string name="series_network_call">Series Network Call</string>
    <string name="parallel_network_call">Parallel Network Call</string>
    <string name="compose">Compose</string>
    <string name="widgets">Widgets</string>
    <string name="text_clock">Text Clock</string>
    <string name="room_database">Room Database</string>
    <string name="long_running_task">Long Running Task</string>
    <string name="long_running_task_started">Long running task started</string>
    <string name="initial_timer">00:00:00</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="stop_watch_with_service">Stop Watch With Service</string>
    <string name="stop">stop</string>
    <string name="loading_3_dots">Loading…</string>
    <string name="custom_loading_dialog">Custom Loading Dialog</string>
    <string name="simple_coroutine">Simple Coroutine</string>
    <string name="work_1">work 1</string>
    <string name="work_2">work 2</string>
    <string name="work_serially">work serially</string>
    <string name="work_parallelly">work parallelly</string>
    <string name="with_timeout_or_null">with timeout or null</string>
    <string name="activity">Activity</string>
    <string name="lifecycle">lifecycle</string>
    <string name="suspend_cancellable_coroutine">suspend cancellable coroutine</string>
    <string name="go_to_activity_b">Go to activity B</string>
    <string name="libraries">Libraries</string>
    <string name="lottie">Lottie</string>
    <string name="bullseye">Bullseye</string>
    <string name="fullscreen">FullScreen</string>
    <string name="hamburger_arrow">hamburger arrow</string>
    <string name="network_status_s">Network Status: %s</string>
    <string name="internet_observer">Internet Observer</string>
    <string name="communication">Communication</string>
    <string name="server_sent_events">Server Sent Events</string>
    <string name="misc">Misc</string>
    <string name="dynamic_launcher_icon_and_text">Dynamic Launcher Icon And Text</string>
    <string name="launcher_one_application_success">Launcher one has been applied successfully!</string>
    <string name="launcher_two_application_success">Launcher two has been applied successfully!</string>
    <string name="launcher_three_application_success">Launcher three has been applied successfully!</string>
    <string name="encrypted_shared_preferences">Encrypted Shared Preferences</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="save">save</string>
    <string name="show">show</string>
    <string name="add_calendar_event">Add calendar event</string>
    <string name="enter_event_title">Enter event title</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select Time</string>
    <string name="set_event">Set Event</string>
    <string name="runtime_permissions">Runtime permissions</string>
    <string name="location">Location</string>
    <string name="custom_thread_pool_service">Custom Thread Pool Service</string>
    <string name="image_compression_using_work_manager">Image Compression using Work Manager</string>
    <string name="flows">Flow</string>
    <string name="title_activity_flow">FlowActivity</string>
    <string name="title_activity_scaffold_example">ScaffoldExampleActivity</string>
    <string name="out_of_memory">Out Of Memory</string>
    <string name="title_activity_oomactivity">OOMActivity</string>
</resources>
