<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAppComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_components"
            />

        <Button
            android:id="@+id/btnSpeechToText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speech_to_text"
            />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            />

        <Button
            android:id="@+id/btnHilt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hilt"
            />

        <Button
            android:id="@+id/btnCoroutines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coroutines" />

        <Button
            android:id="@+id/btnCompose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compose"
            />

        <Button
            android:id="@+id/btnWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widgets"
            />

        <Button
            android:id="@+id/btnLibraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraries"
            />

        <Button
            android:id="@+id/btnInternetObserver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_observer"
            />

    </LinearLayout>

</ScrollView>