<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        />

    <Button
        android:id="@+id/btnWork1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_1" />

    <Button
        android:id="@+id/btnWork2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_2" />

    <Button
        android:id="@+id/btnWorkSerially"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_serially" />

    <Button
        android:id="@+id/btnWorkParallelly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_parallelly" />

    <Button
        android:id="@+id/btnWithTimeoutOrNull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/with_timeout_or_null" />

    <Button
        android:id="@+id/btnSuspendCancellableCoroutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suspend_cancellable_coroutine" />

</LinearLayout>