<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".coroutines.CoroutinesExamplesActivity">

    <Button
        android:id="@+id/btnSingleNetworkCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_network_call"
        />

    <Button
        android:id="@+id/btnSeriesNetworkCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series_network_call" />

    <Button
        android:id="@+id/btnParallelNetworkCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parallel_network_call" />

    <Button
        android:id="@+id/btnRoomDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_database" />

    <Button
        android:id="@+id/btnLongRunningTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_running_task" />

</LinearLayout>