<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".misc.EncryptedSharedPreferencesActivity">

    <EditText
        android:id="@+id/etKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        android:importantForAutofill="no"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:importantForAutofill="no"
        android:inputType="text"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"
        />

</LinearLayout>