<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".misc.MiscActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btnDynamicLauncherIconAndText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_launcher_icon_and_text"
        />

    <Button
        android:id="@+id/btnEncryptedSharedPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_shared_preferences"
        />

    <Button
        android:id="@+id/btnAddCalendarEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_calendar_event"
        />

</LinearLayout>