<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appcomponents.services.activities.ServicesExampleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnForegroundService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foreground_service"/>

        <Button
            android:id="@+id/btnBackgroundService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_service"/>

        <Button
            android:id="@+id/btnBoundService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bound_service" />

    </LinearLayout>

</ScrollView>